Add opens for jacoco.