@@ -98,6 +98,7 @@ test {
             '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
             '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
             '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
 
             '-Dio.netty.tryReflectionSetAccessible=true'
     ]
@@ -155,6 +156,7 @@ test {
                 '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
                 '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
                 '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+                '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
 
                 '-Dio.netty.tryReflectionSetAccessible=true'
         ]
@@ -240,6 +242,7 @@ task testOnPackagedReleaseJar(type: Test){
             '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
             '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
             '--add-opens', 'java.security.jgss/sun.security.krb5=ALL-UNNAMED',
+            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
 
             '-Dio.netty.tryReflectionSetAccessible=true'
     ]
